--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,18 +34,18 @@
 						<li>
 							<a href="#">Automovilismo</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
+								<li><a href="#">Fotos</a></li>
+								<li><a href="#">Videos</a></li>
 								<li>
-									<a href="#">Phasellus consequat</a>
+									<a href="#">Noticias</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Zonal</a></li>
+										<li><a href="#">Provincial</a></li>
+										<li><a href="#">Nacional</a></li>
+										<li><a href="#">Interonacional</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
+
 							</ul>
 						</li>
 						<li><a href="left-sidebar.html">Historia</a></li>
@@ -80,13 +80,13 @@
 
 						<!-- Links -->
 						<section class="widget links">
-							<h3>Random Stuff</h3>
+							<h3>aca va a ir algo</h3>
 							<ul class="style2">
-								<li><a href="#">Etiam feugiat condimentum</a></li>
-								<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-								<li><a href="#">Sed porttitor cras in erat nec</a></li>
-								<li><a href="#">Felis varius pellentesque potenti</a></li>
-								<li><a href="#">Nullam scelerisque blandit leo</a></li>
+								<li><a href="#">aca una cosa</a></li>
+								<li><a href="#">aca otra</a></li>
+								<li><a href="#">aca otra mas</a></li>
+								<li><a href="#">aca ya deberia ir otra</a></li>
+								<li><a href="#">y esto seria relleno</a></li>
 							</ul>
 						</section>
 
@@ -95,13 +95,13 @@
 
 						<!-- Links -->
 						<section class="widget links">
-							<h3>Random Stuff</h3>
+							<h3>lo mismo que antes</h3>
 							<ul class="style2">
-								<li><a href="#">Etiam feugiat condimentum</a></li>
-								<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-								<li><a href="#">Sed porttitor cras in erat nec</a></li>
-								<li><a href="#">Felis varius pellentesque potenti</a></li>
-								<li><a href="#">Nullam scelerisque blandit leo</a></li>
+								<li><a href="#">pero con mas relleno</a></li>
+								<li><a href="#">o algo que interesa</a></li>
+								<li><a href="#">como el misterio</a></li>
+								<li><a href="#">de la peluza del ombligo</a></li>
+								<li><a href="#">felipe</a></li>
 							</ul>
 						</section>
 
@@ -110,13 +110,13 @@
 
 						<!-- Links -->
 						<section class="widget links">
-							<h3>Random Stuff</h3>
+							<h3>Contacto</h3>
 							<ul class="style2">
-								<li><a href="#">Etiam feugiat condimentum</a></li>
-								<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-								<li><a href="#">Sed porttitor cras in erat nec</a></li>
-								<li><a href="#">Felis varius pellentesque potenti</a></li>
-								<li><a href="#">Nullam scelerisque blandit leo</a></li>
+								<li><a href="#">Tel 2474667855</a></li>
+								<li><a href="#">andresvazquez45@gmail.com</a></li>
+								<li><a href="#">@vascom18</a></li>
+								<li><a href="#">no tengo tiktok</a></li>
+								<li><a href="#">ya no uso msn</a></li>
 							</ul>
 						</section>
 
@@ -125,22 +125,24 @@
 
 						<!-- Contact -->
 						<section class="widget contact last">
-							<h3>Contact Us</h3>
+							<h3>Redes</h3>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+								<li><a href="https://www.instagram.com/los90competicion/"
+										class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 								</li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span
-											class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span
-											class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
+								<li><a href="https://www.instagram.com/los90competicion/"
+										class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/los90competicion/"
+										class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/los90competicion/"
+										class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
 								</li>
-								<li><a href="#" class="icon brands fa-pinterest"><span
-											class="label">Pinterest</span></a></li>
+								<li><a href="https://www.instagram.com/los90competicion/"
+										class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
 							</ul>
-							<p>1234 Fictional Road<br />
-								Nashville, TN 00000<br />
-								(800) 555-0000</p>
+							<p> Salto<br />
+								Buenos Aires, Argentina<br />
+								2474 667855</p>
 						</section>
 
 					</div>
@@ -149,8 +151,8 @@
 					<div class="col-12">
 						<div id="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Los 90 Competicion. All rights reserved</li>
+								<li>Design: Vazquez Andres</li>
 							</ul>
 						</div>
 					</div>
