--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Logo -->
 				<div id="logo">
-					<img src="{% static '/home/images/los90.jpg'%}" alt="" style="width: 30%;">
+					<img src="{% static '/home/images/los90.png'%}" alt="" style="width: 30%;">
 				</div>
 
 				<!-- Nav -->
