--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,8 +8,9 @@
 
 <head>
 	{% load static %}
-	<title>Mi Web</title>
+	<title>Los 90</title>
 	<meta charset="utf-8" />
+	<link rel="icon" href="{% static '/home/images/los90.ico'%}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="{% static '/home/assets/css/main.css'%}" />
 </head>
